--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,21 @@
         <span class="label">Lunch break:</span>
         <span class="value" id="lunch-info">Not yet (after 6h)</span>
     </div>
+    <div class="summary-row" id="overtime-row">
+        <span class="label">Overtime:</span>
+        <span class="value" id="overtime">--:--:--</span>
+    </div>
     <hr>
-    <div class="summary-row highlight">
-        <span class="label">Earliest leave:</span>
+    <div class="summary-row">
+        <span class="label">Earliest leave (6h):</span>
         <span class="value" id="earliest-leave">--:--</span>
     </div>
     <div class="summary-row highlight">
-        <span class="label">Latest leave:</span>
+        <span class="label">Normal leave (8h12m):</span>
+        <span class="value" id="normal-leave">--:--</span>
+    </div>
+    <div class="summary-row">
+        <span class="label">Latest leave (10h):</span>
         <span class="value" id="latest-leave">--:--</span>
     </div>
     <div class="summary-row">
