--- a/templates/index.html
+++ b/templates/index.html
@@ -58,5 +58,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="/static/js/timer.js"></script>
+<script src="/static/js/timer.js?v={{ version }}"></script>
 {% endblock %}
