feat: Add favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
         [data-theme="light"] .theme-toggle::before { content: '\263E'; }
     </style>
     <link rel="stylesheet" href="/static/css/style.css?v={{ version }}">
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
     <script src="/static/js/theme.js?v={{ version }}" defer></script>
 </head>
 <body>
