fix: Adjust wording

--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -84,7 +84,7 @@
 <div id="session-modal" class="modal" onclick="closeModalOnBackdrop(event)">
     <div class="modal-content">
         <div class="modal-header">
-            <h3>Session Details</h3>
+            <h3>Arbeitstag Details</h3>
             <button class="modal-close" onclick="closeModal()" aria-label="Schliessen">&times;</button>
         </div>
         <div class="modal-body" id="modal-body">
